fix($stylesheet): Rename dynamic-text-color function to dynamic-contrast-color

--- a/src/styles/_base_products.scss
+++ b/src/styles/_base_products.scss
@@ -49,7 +49,7 @@
 			width: 100%;
 			margin: 0;
 			padding: $gutter-width / 2;
-			color: dynamic-text-color($interface__background-color);
+			color: dynamic-contrast-color($interface__background-color);
 			text-align: center;
 			z-index: z-index(element--middleground);
 		}
@@ -189,7 +189,7 @@
 		margin-left: ($progress__circle-size - $progress__inset-size)/2;
 		border-radius: 50%;
 		background-color: $interface__background-color;
-		color: dynamic-text-color($interface__background-color);
+		color: dynamic-contrast-color($interface__background-color);
 		line-height: $progress__inset-size;
 		text-align: center;
 
