--- a/src/styles/_section_checklist.scss
+++ b/src/styles/_section_checklist.scss
@@ -73,7 +73,7 @@
     margin: 0 $gutter-width / 2 0 0;
     border-radius: 50%;
     background-color: $accent__color;
-    color: dynamic-text-color($accent__color);
+    color: dynamic-contrast-color($accent__color);
     font-size: modular-scale(-1);
     line-height: 32px;
     text-align: center;
