--- a/src/styles/_section_course_curriculum_legacy.scss
+++ b/src/styles/_section_course_curriculum_legacy.scss
@@ -129,16 +129,16 @@
 
   .section-color-preset__primary & {
     background-color: $primary-text-color;
-    color: dynamic-text-color($primary-text-color);
+    color: dynamic-contrast-color($primary-text-color);
   }
 
   .section-color-preset__secondary & {
     background-color: $secondary-text-color;
-    color: dynamic-text-color($secondary-text-color);
+    color: dynamic-contrast-color($secondary-text-color);
   }
 
   .section-color-preset__tertiary & {
     background-color: $tertiary-text-color;
-    color: dynamic-text-color($tertiary-text-color);
+    color: dynamic-contrast-color($tertiary-text-color);
   }
 }
